--- a/Cloud-Computing/cafe_api_release/config.ini
+++ b/Cloud-Computing/cafe_api_release/config.ini
@@ -1,5 +1,5 @@
 [database]
-host=cafe-db.c03roqoeegx9.us-east-1.rds.amazonaws.com
+host=cafedb.c03roqoeegx9.us-east-1.rds.amazonaws.com
 name=cafe_db
 user=admin
 password=Re:Start!9
